Fontawsomeを5にアップデート

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -32,6 +32,8 @@
 
 @import oulu-helpers
 @import settings/helpers/**/*
+@import font-awesome-sprockets
+@import font-awesome
 
 //////////////////////////////
 // style
