--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -55,8 +55,8 @@ textarea.a-sm-text-input
   +text-block(.8125rem 1.45 .5rem, block 600)
   &.is-required
     &::after
-      +fa('\f069')
-      +text-block(.3125rem, 400 $danger)
+      +fa(fas '\f069')
+      +text-block(.3125rem, $danger)
       margin-left: .1875rem
       +inline-block(top)
 
