--- a/app/assets/stylesheets/blocks/auth-form/_auth-form-radio-button.sass
+++ b/app/assets/stylesheets/blocks/auth-form/_auth-form-radio-button.sass
@@ -77,7 +77,7 @@
     border-color: #d9c02a
     font-weight: 600
     &::after
-      +fa('\f00c')
+      +fa(fas '\f00c')
       +text-block(.75rem .875rem, center block #4193e9)
       +size(.875rem)
       +position(absolute, left .75rem, top 50%)
