--- a/app/assets/stylesheets/blocks/user/_active-practices-list.sass
+++ b/app/assets/stylesheets/blocks/user/_active-practices-list.sass
@@ -9,7 +9,7 @@
   +padding(vertical, .25rem)
   +hover-link
   &::before
-    +fa('\f060')
+    +fa(fas '\f060')
     +inline-block
     margin-right: .5rem
     color: $accent-color
