--- a/app/assets/stylesheets/welcome/auth-form2/_auth-form-item.sass
+++ b/app/assets/stylesheets/welcome/auth-form2/_auth-form-item.sass
@@ -10,7 +10,7 @@
   +text-block(1rem 1.45 .75rem, block 700)
   &.is-required
     &::after
-      +fa('\00203b 必須')
+      content: '\00203b 必須'
       +text-block(.625rem, 600 $danger)
       margin-left: .1875rem
       +inline-block(top)
