--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -12,7 +12,7 @@ header.page-header
         |（#{t("activerecord.enums.user.purposes.#{@user.purpose}")}目的）
       .page-header__action
         = link_to admin_users_path, class: "is-button-simple-md-secondary" do
-          i.fa.fa-angle-left
+          i.fas.fa-angle-left
           | ユーザー一覧
 
 .page-body
@@ -50,23 +50,23 @@ header.page-header
                     - if @user.github_account?
                       li
                         = link_to user_github_url(@user), class: 'is-button-simple-sm-secondary is-icon' do
-                          i.fa.fa-github-alt
+                          i.fas.fa-github-alt
                     - if @user.twitter_account?
                       li
                         = link_to @user.twitter_url, class: 'is-button-simple-sm-secondary is-icon' do
-                          i.fa.fa-twitter
+                          i.fab.fa-twitter
                     - if @user.facebook_url?
                       li
                         = link_to @user.facebook_url, class: 'is-button-simple-sm-secondary is-icon' do
-                          i.fa.fa-facebook
+                          i.fab.fa-facebook
                     - if @user.blog_url?
                       li
                         = link_to @user.blog_url, class: 'is-button-simple-sm-secondary is-icon' do
-                          i.fa.fa-home
+                          i.fas.fa-home
                         - if @user.feed_url?
                           li
                             = link_to @user.feed_url, class: 'is-button-simple-sm-secondary is-icon' do
-                              i.fa.fa-rss
+                              i.fas.fa-rss
               tr.admin-table__item
                 td.admin-table__item-value
                   = simple_format @user.description
