--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -1,6 +1,6 @@
 footer.footer
   .container
     .footer__copyright
-      i.fa.fa-copyright
+      i.fas.fa-copyright
       = link_to "FJORD, LLC", "http://fjord.jp", class: "footer__copyright-link"
       = Date.today.year
