--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -8,7 +8,7 @@
             | #{report.user.login_name}さんの#{l report.created_at, format: :date_default}の日報
           = report.title
           .thread-comment__title-count
-            i.fa.fa-comment-o
+            i.fas.fa-comment
             = report.comments.size
 
       time.thread-comment__created-at(datetime='#{report.created_at.to_datetime}' pubdate='pubdate')
@@ -20,7 +20,7 @@
         ul.thread-comment__actions-items
           li.thread-comment__actions-item
             = link_to [:edit, report, comment], class: 'thread-comment__actions-item-link' do
-              i.fa.fa-pencil
+              i.fas.fa-pencil
           li.thread-comment__actions__item
             = link_to [report, comment], data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-comment__actions-item-link' do
-              i.fa.fa-trash-o
+              i.fas.fa-trash-alt
