--- a/app/views/home/_administrator.slim
+++ b/app/views/home/_administrator.slim
@@ -24,16 +24,16 @@ section.welcome-section.is-administrator#administrator
                   ul.welcome-member__sns
                     li.welcome-member__sns-item
                       = link_to "https://github.com/komagata", class: "welcome-member__sns-item-link" do
-                        i.fa.fa-github-alt
+                        i.fas.fa-github-alt
                     li.welcome-member__sns-item
                       = link_to "https://github.com/komagata", class: "welcome-member__sns-item-link" do
-                        i.fa.fa-home
+                        i.fas.fa-home
                     li.welcome-member__sns-item
                       = link_to "https://twitter.com/komagata", class: "welcome-member__sns-item-link" do
-                        i.fa.fa-twitter
+                        i.fab.fa-twitter
                     li.welcome-member__sns-item
                       = link_to "https://www.facebook.com/komagata1111", class: "welcome-member__sns-item-link" do
-                        i.fa.fa-facebook-square
+                        i.fab.fa-facebook-square
 
           .col-xs-12.col-md-6
             section.welcome-member
@@ -47,17 +47,17 @@ section.welcome-section.is-administrator#administrator
                   ul.welcome-member__sns
                     li.welcome-member__sns-item
                       = link_to "https://github.com/machida", class: "welcome-member__sns-item-link" do
-                        i.fa.fa-github-alt
+                        i.fas.fa-github-alt
                     //
                       li.welcome-member__sns-item
                         = link_to ""  , class: "welcome-member__sns-item-link" do
-                          i.fa.fa-home
+                          i.fas.fa-home
                     li.welcome-member__sns-item
                       = link_to "https://twitter.com/machida", class: "welcome-member__sns-item-link" do
-                        i.fa.fa-twitter
+                        i.fab.fa-twitter
                     li.welcome-member__sns-item
                       = link_to "https://www.facebook.com/teppeimachida", class: "welcome-member__sns-item-link" do
-                        i.fa.fa-facebook-square
+                        i.fab.fa-facebook-square
 
     section.welcome-child-section
       h3.welcome-child-section__title.is-reversal
