--- a/app/views/home/_main_visual.slim
+++ b/app/views/home/_main_visual.slim
@@ -16,5 +16,5 @@
         .main-visual__image-container
           = image_tag("free.svg", alt: "無料", class: "main-visual__free-image")
     .main-visual__open-nav.is-hidden-lg-up.js-open-welcome-global-nav
-      i.fa.fa-bars
+      i.fas.fa-bars
     .main-visual__screen.js-close-welcome-global-nav.js-close-welcome-global-nav__overlay
