--- a/app/views/home/_welcome_global_nav.slim
+++ b/app/views/home/_welcome_global_nav.slim
@@ -31,4 +31,4 @@
             a.welcome-global-nav__item-link.js-close-welcome-global-nav(data-scroll href= '#form')
               | 申し込み
     a.welcome-global-nav__to-top.js-to-top(data-scroll href= "#body")
-      i.fa.fa-arrow-up
+      i.fas.fa-arrow-up
