--- a/app/views/practices/_practice.html.slim
+++ b/app/views/practices/_practice.html.slim
@@ -24,13 +24,13 @@
       ul.is-button-group
         li
           = link_to practice_position_path(practice, move: :top), method: :put, class: 'is-button-simple-xs-secondary is-icon category-practices-item-handle-action'
-            i.fa.fa-angle-double-up
+            i.fas.fa-angle-double-up
         li
           = link_to practice_position_path(practice, move: :higher), method: :put, class: 'is-button-simple-xs-secondary is-icon category-practices-item-handle-action'
-            i.fa.fa-angle-up
+            i.fas.fa-angle-up
         li
           = link_to practice_position_path(practice, move: :lower), method: :put, class: 'is-button-simple-xs-secondary is-icon category-practices-item-handle-action'
-            i.fa.fa-angle-down
+            i.fas.fa-angle-down
         li
           = link_to practice_position_path(practice, move: :bottom), method: :put, class: 'is-button-simple-xs-secondary is-icon category-practices-item-handle-action'
-            i.fa.fa-angle-double-down
+            i.fas.fa-angle-double-down
