--- a/app/views/practices/_temp_questions.slim
+++ b/app/views/practices/_temp_questions.slim
@@ -11,17 +11,17 @@
           | 2016年11月14(水) 16:53
         .user-reports-item__comment-count
           .user-reports-item__comment-count-label
-            i.fa.fa-comment-o
+            i.fas.fa-comment
           .user-reports-item__comment-count-value
             | 4
       .user-reports-item-actions
         ul.user-reports-item-actions__items
           li.user-reports-item-actions__item
             a.user-reports-item-actions__item-link href="/reports/4/edit"
-              i.fa.fa-pencil
+              i.fas.fa-pencil
           li.user-reports-item-actions__item
             a.user-reports-item-actions__item-link data-confirm="本当によろしいですか？" data-method="delete" href="/reports/4" rel="nofollow"
-              i.fa.fa-trash-o
+              i.fas.fa-trash-alt
 
   .page-actions
     ul.page-actions__items
