--- a/app/views/products/_products.html.slim
+++ b/app/views/products/_products.html.slim
@@ -14,7 +14,7 @@
           - if product.comments.any?
             .thread-list-item-meta__comment-count
               .thread-list-item-meta__comment-count-label
-                i.fa.fa-comment-o
+                i.fas.fa-comment
               .thread-list-item-meta__comment-count-value
                 = product.comments.size
           - if product.checks.any?
