--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -7,7 +7,7 @@ header.page-header.is-margin-bottom-0
         .page-header-actions__items
           .page-header-actions__item
             = link_to new_question_path, class: "is-button-simple-md-warning" do
-              i.fa.fa-plus
+              i.fas.fa-plus
               = t("new_question")
 
 .page-body
