--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -26,7 +26,7 @@
               = render "learning_time_fields", f: learning_time
             .links
               = link_to_add_association f, :learning_times, class: 'is-button-simple-md-warning' do
-                i.fa.fa-plus
+                i.fas.fa-plus
                 | 学習時間追加
 
     .form-item
