--- a/app/views/reports/_recent_reports.slim
+++ b/app/views/reports/_recent_reports.slim
@@ -10,4 +10,4 @@
       = l report.updated_at, format: :date_default
     - if report.checks.present?
       .recent-reports-item__checked
-        i.fa.fa-check
+        i.fas.fa-check
