--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -54,13 +54,13 @@
             ul.thread-edit-tools__items
               li.thread-edit-tools__item
                 = link_to edit_report_path(report), class: 'thread-edit-tools__item-link is-success', id: "js-shortcut-edit" do
-                  i.fa.fa-pencil
+                  i.fas.fa-pencil
               li.thread-edit-tools__item
                 = link_to new_report_path(id: report), class: 'thread-edit-tools__item-link is-success' do
-                  i.fa.fa-files-o
+                  i.fas.fa-copy
               li.thread-edit-tools__item
                 = link_to report_path(report), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-edit-tools__item-link is-danger' do
-                  i.fa.fa-trash-o
+                  i.fas.fa-trash-alt
 
     - if (admin_login? || adviser_login?) && @report.checks.blank?
       .thread-admin-tools
@@ -72,7 +72,7 @@
     .thread-prev-next__item
       - if report.previous
         = link_to report.previous, class: "thread-prev-next__item-link is-prev" do
-          i.fa.fa-angle-left
+          i.fas.fa-angle-left
           | 前の日報
     .thread-prev-next__item
       = link_to reports_path, class: "thread-prev-next__item-link is-index" do
@@ -81,7 +81,7 @@
       - if report.next
         = link_to report.next, class: "thread-prev-next__item-link is-next" do
           | 次の日報
-          i.fa.fa-angle-right
+          i.fas.fa-angle-right
 
   = link_to report.user, itempro: "url", class: "thread__author-link" do
     = gravatar_tag report.user, secure: true, size: 120, html: { class: "thread__author-icon" }
