--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -8,7 +8,7 @@ header.page-header.is-margin-bottom-0.has-border-bottom-none
         .page-header-actions__items
           .page-header-actions__item
             = link_to new_report_path, class: 'is-button-simple-md-warning' do
-              i.fa.fa-plus
+              i.fas.fa-plus
               = t('new_report')
 
 nav.sort-nav
