--- a/app/views/reports/new.html.slim
+++ b/app/views/reports/new.html.slim
@@ -8,7 +8,7 @@ header.page-header
         .page-header-actions__items
           .page-header-actions__item
             = link_to reports_path, class: 'is-button-simple-md-secondary' do
-              i.fa.fa-angle-left
+              i.fas.fa-angle-left
               = t('to_index_of_reports')
 
 .page-body
