--- a/app/views/users/_product.html.slim
+++ b/app/views/users/_product.html.slim
@@ -6,6 +6,6 @@
     - if product.comments.any?
       .user-reports-item__comment-count
         .user-reports-item__comment-count-label
-          i.fa.fa-comment-o
+          i.fas.fa-comment
         .user-reports-item__comment-count-value
           = product.comments.count
