--- a/app/views/users/_reports.html.slim
+++ b/app/views/users/_reports.html.slim
@@ -9,6 +9,6 @@
           - if report.comments.any?
             .user-reports-item__comment-count
               .user-reports-item__comment-count-label
-                i.fa.fa-comment-o
+                i.fas.fa-comment
               .user-reports-item__comment-count-value
                 = report.comments.count
