--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -5,7 +5,7 @@ header.page-header
         = t('listing_categories')
       .page-header__action
         = link_to new_admin_category_path, class: 'is-button-simple-md-warning' do
-          i.fa.fa-plus
+          i.fas.fa-plus
           = t('new_category')
 .page-body
   .container.is-padding-horizontal-0-sm-down
@@ -32,21 +32,21 @@ header.page-header
                 ul.is-button-group
                   li
                     = link_to edit_admin_category_path(category), class: 'is-button-simple-sm-primary is-icon' do
-                      i.fa.fa-pencil
+                      i.fas.fa-pencil
                   li
                     = link_to [:admin, category], data: { confirm: t('are_you_sure') }, method: :delete, class: 'is-button-simple-sm-danger is-icon' do
-                      i.fa.fa-trash-o
+                      i.fas.fa-trash-alt
               td.admin-table__item-value.is-text-align-center
                 ul.is-button-group
                   li
                     = link_to admin_category_position_path(category, move: :top), method: :put, class: 'is-button-simple-sm-secondary is-icon'
-                      i.fa.fa-angle-double-up
+                      i.fas.fa-angle-double-up
                   li
                     = link_to admin_category_position_path(category, move: :higher), method: :put, class: 'is-button-simple-sm-secondary is-icon'
-                      i.fa.fa-angle-up
+                      i.fas.fa-angle-up
                   li
                     = link_to admin_category_position_path(category, move: :lower), method: :put, class: 'is-button-simple-sm-secondary is-icon'
-                      i.fa.fa-angle-down
+                      i.fas.fa-angle-down
                   li
                     = link_to admin_category_position_path(category, move: :bottom), method: :put, class: 'is-button-simple-sm-secondary is-icon'
-                      i.fa.fa-angle-double-down
+                      i.fas.fa-angle-double-down
