--- a/app/views/admin/users/in_actives/index.html.slim
+++ b/app/views/admin/users/in_actives/index.html.slim
@@ -30,7 +30,7 @@ header.page-header
                 = l user.updated_at
               td.admin-table__item-value.is-text-align-center
                 = link_to edit_admin_user_path(user), class: 'is-button-simple-sm-warning is-icon' do
-                  i.fa.fa-pencil
+                  i.fas.fa-pencil
 
     h2 メールアドレス
     textarea.a-text-input
