--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -15,22 +15,22 @@ header.header
             = form_tag reports_url, method: "get", class: "header-search" do
               = text_field_tag "word", params[:word], class: "a-xs-text-input header-search__text-input", placeholder: t("search_report")
               button.is-button-simple-sm-secondary.is-icon.header-search__submit(type="submit")
-                i.fa.fa-search
+                i.fas.fa-search
           li.header-links__item(class="#{current_user.notifications.unreads.count > 0 ? "js-drop-down has-count" : "has-no-count"}")
             .header-links__link.js-drop-down__trigger.test-bell
               .header-notification-icon
                 - if current_user.notifications.unreads.count > 0
                   .header-notification-count
                     = current_user.notifications.unreads.count
-                i.fa.fa-bell-o
+                i.fas.fa-bell
             - if current_user.notifications.unreads.exists?
               = render "application/notifications"
           li.header-links__item
             = link_to edit_user_path(current_user), class: "header-links__link" do
-              i.fa.fa-cog
+              i.fas.fa-cog
           li.header-links__item
             = link_to logout_path, class: "header-links__link" do
-              i.fa.fa-sign-out
+              i.fas.fa-sign-out
       .header-show-mobile-nav-items
         .header-show-mobile-nav(class="#{current_user.notifications.unreads.count > 0 ? "js-drop-down has-count" : "has-no-count"}")
           .header-links__link.js-drop-down__trigger
@@ -38,8 +38,8 @@ header.header
               - if current_user.notifications.unreads.count > 0
                 .header-notification-count
                   = current_user.notifications.unreads.count
-              i.fa.fa-bell-o
+              i.fas.fa-bell
           - if current_user.notifications.unreads.exists?
             = render "application/notifications"
         .header-show-mobile-nav.js-show-mobile-nav
-          i.fa.fa-bars
+          i.fas.fa-bars
