--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -6,7 +6,7 @@ header.page-header
         = title
       .page-header__action
         = link_to [:new, :page], class: 'is-button-simple-md-warning' do
-          i.fa.fa-plus
+          i.fas.fa-plus
           | 新規ページ
 .page-body
   .container
