--- a/app/views/practices/products/index.html.slim
+++ b/app/views/practices/products/index.html.slim
@@ -6,7 +6,7 @@ header.page-header
         = @practice.title
       .page-header__action
         = link_to practices_path, class: 'is-button-simple-md-secondary' do
-          i.fa.fa-angle-left
+          i.fas.fa-angle-left
           = t('practices')
 
 = render "page_tabs", resource: @practice
