--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -8,11 +8,11 @@ header.page-header
         ul.page-header-actions__items
           li.page-header-actions__item
             = link_to new_practice_path, class: 'is-button-simple-md-warning' do
-              i.fa.fa-plus
+              i.fas.fa-plus
               = t('new_practice')
           li.page-header-actions__item
             = link_to practices_path, class: 'is-button-simple-md-secondary' do
-              i.fa.fa-angle-left
+              i.fas.fa-angle-left
               = t('practices')
 
 = render "page_tabs", resource: @practice
@@ -30,11 +30,11 @@ header.page-header
             ul.practice-content-actions__items
               li.practice-content-actions__item
                 = link_to new_question_path, class: 'is-button-simple-md-warning' do
-                  i.fa.fa-question-circle
+                  i.fas.fa-question-circle
                   | 質問する
               li.practice-content-actions__item
                 button.im-stack.is-button-simple-md-warning
-                  i.fa.fa-exclamation-triangle
+                  i.fas.fa-exclamation-triangle
                   = '行き詰まった！'
                 javascript:
                   $(document).on('click', '.im-stack', function(){
@@ -59,29 +59,29 @@ header.page-header
               - if @practice.product(current_user).present?
                 li.practice-content-actions__item
                   = link_to [@practice, @practice.product(current_user)], class: 'is-button-simple-md-info' do
-                    i.fa.fa-file
+                    i.fas.fa-file
                     | 提出物
               - else
                 li.practice-content-actions__item
                   = link_to new_practice_product_path(@practice), class: 'is-button-simple-md-info' do
-                    i.fa.fa-file
+                    i.fas.fa-file
                     | 提出物を作る
             - if @practice.not_completed?(current_user)
               li.practice-content-actions__item
                 = link_to practice_learning_path(@practice), method: :put, class: 'is-button-simple-md-info' do
-                  i.fa.fa-check-circle
+                  i.fas.fa-check-circle
                   = t('complete')
 
   .form-actions
     ul.form-actions__items
       li.form-actions__item
         = link_to edit_practice_path(@practice), class: 'is-button-simple-md-primary' do
-          i.fa.fa-pencil
+          i.fas.fa-pencil
           = t('edit')
       - if current_user.admin?
         li.form-actions__item
           = link_to practice_path(@practice), data: { confirm: t('are_you_sure') }, method: :delete, class: 'is-button-simple-md-danger' do
-            i.fa.fa-trash-o
+            i.fas.fa-trash-alt
             = t('destroy')
 
   .interns-icons
