--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -9,15 +9,15 @@
       .thread-list-item__actions
         - if current_user == question.user
           = link_to edit_question_path(question), class: 'thread-list-item__actions-link' do
-            i.fa.fa-pencil
+            i.fas.fa-pencil
           = link_to question_path(question), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-list-item__actions-link' do
-            i.fa.fa-trash-o
+            i.fas.fa-trash-alt
     .thread-list-item-meta
       time.thread-list-item-meta__updated-at(datetime="#{question.updated_at.to_datetime}" pubdate="pubdate")
         = l question.updated_at, format: :semi_long
       - if question.answers.present?
         .thread-list-item-meta__comment-count
           .thread-list-item-meta__comment-count-label
-            i.fa.fa-comment-o
+            i.fas.fa-comment
           .thread-list-item-meta__comment-count-value
             = question.answers.size
