--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -5,7 +5,7 @@ header.page-header
       h2.page-header__title
         = t('new_question')
       = link_to questions_path, class: 'is-button-simple-md-secondary' do
-        i.fa.fa-angle-left
+        i.fas.fa-angle-left
         = t('to_index_of_questions')
 .page-body
   .container
