--- a/app/views/reports/_report_comment.slim
+++ b/app/views/reports/_report_comment.slim
@@ -16,7 +16,7 @@
         ul.thread-comment__actions-items
           li.thread-comment__actions-item
             = link_to edit_report_comment_path(report, comment), class: 'thread-comment__actions-item-link' do
-              i.fa.fa-pencil
+              i.fas.fa-pencil
           li.thread-comment__actions__item
             = link_to  report_comment_path(report, comment), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-comment__actions-item-link' do
-              i.fa.fa-trash-o
+              i.fas.fa-trash-alt
