--- a/app/views/reports/_report_list_item.html.slim
+++ b/app/views/reports/_report_list_item.html.slim
@@ -12,18 +12,18 @@
       - if current_user == report.user
         .thread-list-item__actions
           = link_to edit_report_path(report), class: 'thread-list-item__actions-link' do
-            i.fa.fa-pencil
+            i.fas.fa-pen
           = link_to new_report_path(id: report), class: 'thread-list-item__actions-link' do
-            i.fa.fa-files-o
+            i.fas.fa-copy
           = link_to report_path(report), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-list-item__actions-link' do
-            i.fa.fa-trash-o
+            i.fas.fa-trash-alt
     .thread-list-item-meta
       time.thread-list-item-meta__updated-at(datetime="#{report.updated_at.to_datetime}" pubdate="pubdate")
         = l report.updated_at, format: :semi_long
       - if report.comments.any?
         .thread-list-item-meta__comment-count
           .thread-list-item-meta__comment-count-label
-            i.fa.fa-comment-o
+            i.fas.fa-comment
           .thread-list-item-meta__comment-count-value
             = report.comments.size
       - if report.checks.any?
