--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -7,7 +7,7 @@ header.page-header
         ul.page-header-actions__items
           li.page-header-actions__item
             = link_to new_report_path, class: "page-header-actions__items-link is-button-simple-md-warning" do
-              i.fa.fa-plus
+              i.fas.fa-plus
               = t("new_report")
           li.page-header-actions__item
             = link_to reports_path, class: "page-header-actions__items-link is-button-simple-md-secondary" do
