fa5のclass名修正漏れ

--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -32,7 +32,7 @@ header.page-header
                 ul.is-button-group
                   li
                     = link_to edit_admin_category_path(category), class: 'is-button-simple-sm-primary is-icon' do
-                      i.fas.fa-pencil
+                      i.fas.fa-pen
                   li
                     = link_to [:admin, category], data: { confirm: t('are_you_sure') }, method: :delete, class: 'is-button-simple-sm-danger is-icon' do
                       i.fas.fa-trash-alt
