--- a/app/views/practices/_temp_questions.slim
+++ b/app/views/practices/_temp_questions.slim
@@ -18,7 +18,7 @@
         ul.user-reports-item-actions__items
           li.user-reports-item-actions__item
             a.user-reports-item-actions__item-link href="/reports/4/edit"
-              i.fas.fa-pencil
+              i.fas.fa-pen
           li.user-reports-item-actions__item
             a.user-reports-item-actions__item-link data-confirm="本当によろしいですか？" data-method="delete" href="/reports/4" rel="nofollow"
               i.fas.fa-trash-alt
