--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -76,7 +76,7 @@ header.page-header
     ul.form-actions__items
       li.form-actions__item
         = link_to edit_practice_path(@practice), class: 'is-button-simple-md-primary' do
-          i.fas.fa-pencil
+          i.fas.fa-pen
           = t('edit')
       - if current_user.admin?
         li.form-actions__item
