--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -26,7 +26,7 @@
         ul.thread-edit-tools__items
           li.thread-edit-tools__item
             = link_to edit_practice_product_path(product.practice), class: "thread-edit-tools__item-link is-success" do
-              i.fas.fa-pencil
+              i.fas.fa-pen
           li.thread-edit-tools-item
             = link_to practice_product_path(product.practice), data: { confirm: "本当によろしいですか？" }, method: :delete, class: "thread-edit-tools__item-link is-danger" do
               i.fas.fa-trash-alt
