--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -54,7 +54,7 @@
             ul.thread-edit-tools__items
               li.thread-edit-tools__item
                 = link_to edit_report_path(report), class: 'thread-edit-tools__item-link is-success', id: "js-shortcut-edit" do
-                  i.fas.fa-pencil
+                  i.fas.fa-pen
               li.thread-edit-tools__item
                 = link_to new_report_path(id: report), class: 'thread-edit-tools__item-link is-success' do
                   i.fas.fa-copy
