--- a/app/views/reports/_reports.slim
+++ b/app/views/reports/_reports.slim
@@ -11,7 +11,7 @@
           - if current_user == report.user
             .thread-list-item__actions
               = link_to edit_report_path(report), class: 'thread-list-item__actions-link' do
-                i.fas.fa-pencil
+                i.fas.fa-pen
               = link_to new_report_path(id: report), class: 'thread-list-item__actions-link' do
                 i.fas.fa-copy
               = link_to report_path(report), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-list-item__actions-link' do
