--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -57,4 +57,4 @@ header.page-header
                   i.fas.fa-times
               td.admin-table__item-value.is-text-align-center
                 = link_to edit_admin_user_path(user), class: 'is-button-simple-sm-warning is-icon' do
-                  i.fas.fa-pencil
+                  i.fas.fa-pen
