--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -28,7 +28,7 @@
         - if answer.user == current_user
           li.thread-comment__actions-item
             = link_to edit_question_answer_path(answer.question, answer, return_to: question_url(answer.question)), class: 'thread-comment__actions-item-link' do
-              i.fas.fa-pencil
+              i.fas.fa-pen
           li.thread-comment__actions__item
             = link_to question_answer_path(answer.question, answer, return_to: question_url(answer.question)), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-comment__actions-item-link' do
               i.fas.fa-trash-alt
