--- a/app/views/pages/show.html.slim
+++ b/app/views/pages/show.html.slim
@@ -34,7 +34,7 @@ header.page-header
               ul.thread-edit-tools__items
                 li.thread-edit-tools__item
                   = link_to [:edit, @page], class: 'thread-edit-tools__item-link is-success' do
-                    i.fas.fa-pencil
+                    i.fas.fa-pen
                 li.thread-edit-tools__item
                   = link_to @page, data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-edit-tools__item-link is-danger' do
                     i.fas.fa-trash-alt
