--- a/app/views/products/comments/_comment.html.slim
+++ b/app/views/products/comments/_comment.html.slim
@@ -16,7 +16,7 @@
         ul.thread-comment__actions-items
           li.thread-comment__actions-item
             = link_to edit_practice_product_comment_path(product.practice, product, comment), class: 'thread-comment__actions-item-link' do
-              i.fas.fa-pencil
+              i.fas.fa-pen
           li.thread-comment__actions__item
             = link_to  practice_product_comment_path(product.practice, product, comment), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-comment__actions-item-link' do
               i.fas.fa-trash-alt
