adminのメニューを整理

--- a/app/assets/stylesheets/blocks/admin/_admin-categories.sass
+++ b/app/assets/stylesheets/blocks/admin/_admin-categories.sass
@@ -1,4 +1,6 @@
 .admin-table
+  max-width: 87.5rem
+  +margin(horizontal, auto)
   +media-breakpoint-down(sm)
     +overflow(auto hidden)
     margin-bottom: 1.5rem
