--- a/app/assets/stylesheets/blocks/shared/_faces.sass
+++ b/app/assets/stylesheets/blocks/shared/_faces.sass
@@ -3,6 +3,9 @@
 
 .faces__inner
   +padding(horizontal, 5rem 14rem)
+  body.is-edit-page &,
+  body.is-admin &
+    padding-right: 0
 
 .faces__items
   display: flex
