--- a/app/views/admin/home/index.html.slim
+++ b/app/views/admin/home/index.html.slim
@@ -2,6 +2,7 @@ header.page-header
   .container
     .page-header__container
       h2.page-header__title 管理ページ
+= render "/admin/admin_page_tabs", active: 0
 .page-body
   .container
     ul
