--- a/app/views/admin/users/in_actives/index.html.slim
+++ b/app/views/admin/users/in_actives/index.html.slim
@@ -2,6 +2,7 @@ header.page-header
   .container
     .page-header__container
       h2.page-header__title アクティブでないユーザー
+= render "/admin/admin_page_tabs", active: 4
 .page-body
   .container.is-padding-horizontal-0-sm-down
     .admin-table
