--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -29,10 +29,17 @@ body
     +padding(horizontal, 6rem 1rem)
   +media-breakpoint-down(sm)
     +padding(horizontal, 1rem)
-  &.has-no-right-padding
+  html body &.has-no-right-padding
     padding-right: 14rem
     +media-breakpoint-down(md)
       +padding(horizontal, 6rem 1rem)
+    +media-breakpoint-down(sm)
+      +padding(horizontal, 1rem)
+  html body.is-edit-page &.has-no-right-padding,
+  html body.is-admin &.has-no-right-padding,
+    padding-right: 0
+    +media-breakpoint-down(md)
+      +padding(horizontal, 6rem 0)
     +media-breakpoint-down(sm)
       +padding(horizontal, 1rem)
   body.no-global-nav &
@@ -46,6 +53,11 @@ body
   body.is-edit-page &,
   body.is-admin &
     padding-right: 1rem
+  body.is-edit-page &.is-padding-horizontal-0-sm-down,
+  body.is-admin &.is-padding-horizontal-0-sm-down
+    padding-right: 0
+
+
 
 body.welcome
   .container
