--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -51,6 +51,9 @@ $header-height: 3.125rem
   .header-links__item.has-count &
     color: $default-text
     cursor: pointer
+  &.is-active
+    background-color: $warning
+    color: $main-color
 
 .header-links__link-count
   +size(1rem)
