--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -7,6 +7,7 @@ header.page-header
         = link_to new_admin_category_path, class: 'is-button-simple-md-warning' do
           i.fas.fa-plus
           = t('new_category')
+= render "/admin/admin_page_tabs", active: 2
 .page-body
   .container.is-padding-horizontal-0-sm-down
     .admin-table
