--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -3,6 +3,7 @@ header.page-header
   .container
     .page-header__container
       h2.page-header__title ユーザー一覧
+= render "/admin/admin_page_tabs", active: 1
 .page-body
   .container.is-padding-horizontal-0-sm-down
     .admin-table
