--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -49,27 +49,16 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
               i.fas.fa-rss
             .global-nav-links__link-label
               | みんなのブログ
+        - if current_user && current_user.admin?
+          li.global-nav-links__item.is-hidden-md-up
+            = link_to admin_root_path, class: "global-nav-links__link" do
+              .global-nav-links__link-icon
+                i.fab.fa-font-awesome-flag
+              .global-nav-links__link-label
+                | 管理ページ
         li.global-nav-links__item.is-hidden-md-up
           = link_to logout_path, class: "global-nav-links__link" do
             .global-nav-links__link-icon
-              i.fas.fa-sign-out
+              i.fas.fa-sign-out-alt
             .global-nav-links__link-label
               | サインアウト
-        - if current_user && current_user.admin?
-          li.global-nav-links__item
-            = link_to admin_users_path, class: "global-nav-links__link #{current_link /^admin-users/}" do
-              .global-nav-links__link-icon
-                i.fas.fa-wrench
-              .global-nav-links__link-label
-                = t('admin_interns')
-          li.global-nav-links__item
-            = link_to admin_categories_path, class: "global-nav-links__link #{current_link /^admin-categories/}" do
-              .global-nav-links__link-icon
-                i.fas.fa-wrench
-              .global-nav-links__link-label
-                = t('categories')
-          li.global-nav-links__item
-            = link_to admin_root_path, class: "global-nav-links__link #{current_link /^admin-home/}" do
-              .global-nav-links__link-icon
-                i.fas.fa-key
-              .global-nav-links__link-label 管理ページ
