--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -16,6 +16,10 @@ header.header
               = text_field_tag "word", params[:word], class: "a-xs-text-input header-search__text-input", placeholder: t("search_report")
               button.is-button-simple-sm-secondary.is-icon.header-search__submit(type="submit")
                 i.fas.fa-search
+          - if current_user && current_user.admin?
+            li.header-links__item
+              = link_to admin_root_path, class: "header-links__link #{current_link /^admin/}" do
+                i.fab.fa-font-awesome-flag
           li.header-links__item(class="#{current_user.notifications.unreads.count > 0 ? "js-drop-down has-count" : "has-no-count"}")
             .header-links__link.js-drop-down__trigger.test-bell
               .header-notification-icon
@@ -30,7 +34,7 @@ header.header
               i.fas.fa-cog
           li.header-links__item
             = link_to logout_path, class: "header-links__link" do
-              i.fas.fa-sign-out
+              i.fas.fa-sign-out-alt
       .header-show-mobile-nav-items
         .header-show-mobile-nav(class="#{current_user.notifications.unreads.count > 0 ? "js-drop-down has-count" : "has-no-count"}")
           .header-links__link.js-drop-down__trigger
