--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -10,7 +10,7 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
         li.global-nav-links__item
           = link_to announcements_path, class: "global-nav-links__link #{current_link /^announcements/}" do
             .global-nav-links__link-icon
-              i.fa.fa-bullhorn
+              i.fas.fa-bullhorn
             .global-nav-links__link-label
               = t('announcements')
         li.global-nav-links__item
