GitHubのアイコン修正

--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -50,7 +50,7 @@ header.page-header
                     - if @user.github_account?
                       li
                         = link_to user_github_url(@user), class: 'is-button-simple-sm-secondary is-icon' do
-                          i.fas.fa-github-alt
+                          i.fab.fa-sign-out-alt
                     - if @user.twitter_account?
                       li
                         = link_to @user.twitter_url, class: 'is-button-simple-sm-secondary is-icon' do
