--- a/app/views/home/_administrator.slim
+++ b/app/views/home/_administrator.slim
@@ -24,7 +24,7 @@ section.welcome-section.is-administrator#administrator
                   ul.welcome-member__sns
                     li.welcome-member__sns-item
                       = link_to "https://github.com/komagata", class: "welcome-member__sns-item-link" do
-                        i.fas.fa-github-alt
+                        i.fab.fa-sign-out-alt
                     li.welcome-member__sns-item
                       = link_to "https://github.com/komagata", class: "welcome-member__sns-item-link" do
                         i.fas.fa-home
@@ -47,7 +47,7 @@ section.welcome-section.is-administrator#administrator
                   ul.welcome-member__sns
                     li.welcome-member__sns-item
                       = link_to "https://github.com/machida", class: "welcome-member__sns-item-link" do
-                        i.fas.fa-github-alt
+                        i.fab.fa-sign-out-alt
                     //
                       li.welcome-member__sns-item
                         = link_to ""  , class: "welcome-member__sns-item-link" do
