--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -34,7 +34,7 @@ header.page-header
                   - if user.github_account?
                     li
                       = link_to user_github_url(user), class: 'is-button-simple-sm-secondary is-icon' do
-                        i.fab.fa-sign-out-alt
+                        i.fab.fa-github-alt
                   - if user.twitter_account?
                     li
                       = link_to user.twitter_url, class: 'is-button-simple-sm-secondary is-icon' do
